--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
   <link rel="stylesheet" href="./css/main.min.css">
-  <title>React App</title>
+  <title>Mridul Bagla</title>
 </head>
 
 <body>
