--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
-  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+  <link rel="shortcut icon"
+    href="https://cdn.bio.link/uploads/profile_pictures/2021-12-10/CxtY6khkCNTE4XygsGWOpqBvMSQFQM8M.png"
+    type="image/webp">
+  <link rel="icon" href="https://cdn.bio.link/uploads/profile_pictures/2021-12-10/CxtY6khkCNTE4XygsGWOpqBvMSQFQM8M.png"
+    type="image/webp">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
     integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
